--- a/css/style.css
+++ b/css/style.css
@@ -392,8 +392,11 @@ textarea {
   color: #fff;
   background: linear-gradient(
     to right,
-    rgba(0, 98, 185, 0.8),
-    rgba(0, 98, 185, 0.8)
+    #000000,
+    #1c1f24,
+    #343a40,
+    #495057,
+    #6c757d
   );
   background-size: cover;
   background-position: center;
